--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="parent">
         <div class="text">
-            <p id="back">Background color is:</p><br>
+            <p id="back">Background color is:#fff</p><br>
             
 
         </div>
