made the heading

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="todolist.css">
 </head>
 <body>
+    <h1>Color Picker..</h1>
     <div class="parent">
         <div class="text">
             <p id="back">Background color is: red</p><br>
